<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="login_next_step">下一步</string>
    <string name="hint_phone_number">手机号码</string>
    <string name="hint_email_address">电子邮箱</string>
    <string name="login_back">返回</string>
    <string name="login_agree_auth_tips">请先阅读并同意《隐私政策》和《用户协议》</string>
    <string name="login_account_not_empty">请输入手机号或邮箱</string>
    <string name="login_email_invalid">邮箱格式错误</string>
    <string name="login_code_sent">验证码已发送</string>
    <string name="login_code_expired">验证码已过期，请重新获取</string>
    <string name="login_code_error">验证码错误</string>
    <string name="login_register_success">注册成功</string>
    <string name="login_ip_rate_limited">注册请求过于频繁，请稍后重试</string>
    <string name="login_sms_rate_limited">发送过于频繁，请稍后重试</string>
    <string name="wklogin_nickname">昵称</string>
    <string name="must_input_name">请输入昵称</string>
    <string name="wklogin_sure">确定</string>
    <string name="input_invite_code_must">请输入邀请码</string>
    <string name="invite_code_not_null">请输入邀请码</string>
    <string name="login_auth_desc">认证说明</string>
    <string name="phone_num">手机号</string>
    <string name="start_auth">开始认证</string>
    <string name="wklogin_upload_header">上传头像</string>
    <string name="login_authing">正在认证</string>
    <string name="login_auth">认证</string>
    <string name="wklogin_perfect_userinfo">完善个人信息</string>
    <string name="wklogin_must_upload_header">请上传头像</string>
    <string name="wklogin_compressing">正在压缩图片...</string>
    <string name="wklogin_uploading">正在上传...</string>
    <string name="wklogin_upload_failed">头像上传失败，请重试</string>
    <string name="wklogin_save_failed">保存失败，请重试</string>
    <string name="wklogin_image_select_error">图片选择失败，请重试</string>
    <string name="wklogin_image_not_exist">图片文件不存在</string>
    <string name="input_invite_code_not_must">邀请码（选填）</string>
    <string name="get_verf_code">获取验证码</string>
    <string name="hint_name">姓名</string>
    <string name="hint_pwd">密码</string>
    <string name="hint_verfi">验证码</string>
    <string name="login">登录</string>
    <string name="privacy_policy">隐私政策</string>
    <string name="register">注册</string>
    <string name="register_app">注册账号</string>
    <string name="sign_in_agree">选中即视为同意《</string>
    <string name="user_agreement">用户协议</string>
    <string name="choose_login_mail">邮箱登录</string>
    <string name="choose_login_phone">手机号登录</string>
    <string name="forget_pwd">忘记密码</string>
    <string name="hint_invitation_code_optional">邀请码（选填）</string>
    <string name="login_sign">登录/注册</string>
    <string name="login_account_entry_desc">输入手机号或邮箱继续</string>
    <string name="login_account_existing_desc">请输入密码登录</string>
    <string name="login_account_new_desc">请输入验证码和密码注册</string>
</resources>
